syntax = "proto3";

package rivet.backend.pkg.dynamic_servers.server_get;

import "proto/common.proto";
import "proto/backend/ds.proto";

message Request {
	repeated rivet.common.Uuid server_ids = 1;
}

message Response {
	 repeated rivet.backend.ds.Server servers = 1;
}
